Update self-hosting next steps

--- a/app/views/docs/self-hosting.phtml
+++ b/app/views/docs/self-hosting.phtml
@@ -1,4 +1,4 @@
-<p>Appwrite is a self-hosted backend server, packaged as a set of Docker containers. You can install and run Appwrite on any operating system that can run a <a href="https://www.docker.com/products/docker-desktop" target="_blank" rel="noopener">Docker CLI</a>. You can use Appwrite on your local machine or a cloud provider of your choice.</p>
+<p>Appwrite can be easily self-hosted on your local machine or a server. You can install and run Appwrite on any operating system that can run a <a href="https://www.docker.com/products/docker-desktop" target="_blank" rel="noopener">Docker CLI</a>. Self-hosted Appwrite instances can be configured flexibly with access to the same features found on Appwrite Cloud.</p>
 
 <h2><a href="/docs/installation#systemRequirements" id="systemRequirements">System Requirements</a></h2>
 
@@ -109,10 +109,10 @@
 </table>
 
 <h2><a href="/docs/installation#next-steps" id="next-steps">Next Steps</a></h2>
-<p>Appwrite's default setup is designed to empower you to start building quickly, but there are more configurable options available depending on your use case. Here are some useful tips and configurable options to help you setup a development environment.</p>
-<p><a href="/docs/development">Learn about Appwrite in development</a></p>
+<p>Self-hosting Appwrite gives you more configurable options. You can customize Appwrite with your choice of S3 compatible storage adaptors, email and SMS providers, functions runtimes, and more.</p>
+<p><a href="/docs/configuration">Learn about configuring Appwrite</a></p>
 
-<p>If you are ready to move Appwrite to a production environment, there are some best practices you should know for performance and security.</p>
+<p>Self-hosted Appwrite instances can be made production ready. To run Appwrite successfully in a production environment, you should follow a few basic concepts and best practices.</p>
 <p><a href="/docs/production">Learn about Appwrite in production</a></p>
 
 <h2><a href="/docs/installation#manual" id="manual">Manual (using docker-compose.yml)</a></h2>
