Configuration outline shuffled

--- a/app/views/docs/configuration.phtml
+++ b/app/views/docs/configuration.phtml
@@ -2,13 +2,13 @@
     Self-hosting Appwrite provides a great deal of flexibility by providing many configurable options. While the default installation gives you all the essentials to get started, here are some useful tips and configurable options that can accelerate your development process.
 </p>
 
-<h2><a href="/docs/configuration#localhost" id="localhost">Localhost</a></h2>
+<h2><a href="#localhost" id="localhost">Localhost</a></h2>
 
 [cookies?]
 [Self-signed stuff]
 [Proxy information for android]
 
-<h2><a href="/docs/configuration#delivery" id="delivery">Setup Email and SMS Delivery</a></h2>
+<h2><a href="#delivery" id="delivery">Setup Email and SMS Delivery</a></h2>
 <p>
     If your application will support features like password recovery, account verification, MagicURL authentication, and team invites, you will need to setup email delivery.
 </p>
@@ -19,7 +19,7 @@
 </p>
 <p><a href="/docs/email-delivery">Set up SMS delivery</a></p>
 
-<h2><a href="/docs/development#function-runtimes" id="function-runtimes">Configure Function Runtimes</a></h2>
+<h2><a href="#functions" id="functions">Configure Function Runtimes</a></h2>
 <p>
     Not all function runtimes are enabled by default. Enable the runtimes that you need and disabled unused runtimes to save disk space on your server.
     To enable a runtime, add it to the <code>_APP_FUNCTIONS_RUNTIMES</code> environment variable as a comma separated list. 
@@ -35,12 +35,9 @@
 
 You can find a full list of supported runtimes in the <a href="/docs/environment-variables#functions">environment variables</a> page.
 
-<h2><a href="/docs/development#function-runtimes" id="function-runtimes">Configure Function Runtimes</a></h2>
+
+<h2><a href="#storage" id="storage">Storage Adaptors</a></h2>
 
 [Storage providers]
 
-<h2><a href="/docs/development#function-runtimes" id="function-runtimes">Configure Root User Whitelists</a></h2>
-
-[_APP_CONSOLE_WHITELIST_ROOT]
-[Details about inviting to project]
 
