--- a/app/views/docs/getting-started-for-server.phtml
+++ b/app/views/docs/getting-started-for-server.phtml
@@ -17,7 +17,7 @@ $swiftVersion = $versions['swift'] ?? '';
 
 <p>Appwrite is a development platform that provides a powerful API and management console to get your next project up and running quickly.</p>
 
-<p>[Cloud Signup CTA]</p>
+<p>[TODO: Cloud Signup CTA]</p>
 
 <h2><a href="/docs/getting-started-for-server#getSDK" id="getSDK">Get the Appwrite SDK for Your Platform</a></h2>
 
