--- a/app/views/docs/getting-started-for-web.phtml
+++ b/app/views/docs/getting-started-for-web.phtml
@@ -17,7 +17,7 @@ $demos = $platform['demos'] ?? [];
 ?>
 <p>Appwrite is a development platform that provides a powerful API and management console to get your next project up and running quickly.</p>
 
-<p>[Cloud Signup CTA]</p>
+<p>[TODO: Cloud Signup CTA]</p>
 
 <h2><a href="/docs/getting-started-for-web#createProject" id="createProject">Create Your First Appwrite Project</a></h2>
 
