--- a/app/views/docs/getting-started-for-flutter.phtml
+++ b/app/views/docs/getting-started-for-flutter.phtml
@@ -15,7 +15,7 @@ $version = (isset($versions['flutter'])) ? $versions['flutter'] : '';
 ?>
 <p>Appwrite is a development platform that provides a powerful API and management console to get your next project up and running quickly.</p>
 
-<p>[Cloud Signup CTA]</p>
+<p>[TODO: Cloud Signup CTA]</p>
 
 <h2><a href="/docs/getting-started-for-flutter#createYourProject" id="createYourProject">Create Your First Appwrite Project</a></h2>
 
@@ -139,11 +139,6 @@ Client client = Client()
 </div>
 
 <p>Before sending any API calls to your new Appwrite project, make sure your mobile device or emulator has network access to your Appwrite project's hostname or IP address.</p>
-
-<div class="notice margin-top-large margin-bottom-large">
-    <h3>Self-Hosting</h3>
-    <p>When connecting to a local self-hosted Appwrite project from an emulator or a mobile device, you should use the private IP of the machine running your Appwrite project as the hostname of the endpoint instead of localhost. You can also use a service like <a href="https://ngrok.com/" target="_blank" rel="noopener">ngrok</a> to proxy the Appwrite instance.</p>
-</div>
 
 <h2><a href="/docs/getting-started-for-flutter#makeRequest" id="makeRequest">Make Your First Request</a></h2>
 
