--- a/app/views/docs/getting-started-for-apple.phtml
+++ b/app/views/docs/getting-started-for-apple.phtml
@@ -15,11 +15,7 @@ $appleVersion = $versions['apple'] ?? '';
 ?>
 <p>Appwrite is a development platform that provides a powerful API and management console to get your next project up and running quickly.</p>
 
-<p>[TODO: Cloud Signup CTA]</p>
-
-<h2><a href="/docs/getting-started-for-apple#createYourProject" id="createYourProject">Create Your First Appwrite Project</a></h2>
-
-<p>Go to your new Appwrite console, and click the <i class="icon-plus"></i> icon in the top navigation header or on the <b>'Create Project'</b> button on your console homepage. Choose a name for your project and click create to get started.</p>
+<p><a href="https://cloud.appwrite.io/">Create your first project now</a> and start building on Appwrite Cloud.</p>
 
 <h2><a href="/docs/getting-started-for-apple#addProject" id="addProject">Add your Apple Platform</a></h2>
 
