--- a/app/views/docs/configuration.phtml
+++ b/app/views/docs/configuration.phtml
@@ -10,7 +10,7 @@
 
 <h2><a href="#delivery" id="delivery">Setup Email and SMS Delivery</a></h2>
 <p>
-    Appwrite requires an SMTP service to deliver emails. Email delivery is required for features like password recovery, account verification, MagicURL authentication, and team invites. You can choose to a third-party SMTP service or hosting your own SMTP server.
+    Appwrite requires an SMTP service to deliver emails. Email delivery is required for features like password recovery, account verification, MagicURL authentication, and team invites. You can use a third-party SMTP service or host your own SMTP server.
 </p>
 <p><a href="/docs/email-delivery">Set up email delivery</a></p>
 
