--- a/app/views/docs/main.phtml
+++ b/app/views/docs/main.phtml
@@ -98,7 +98,7 @@ $getSpecsUrl = function($type, $platform) use ($latestVersion) {
 
     <div class="margin-bottom-large">
         <h2 class="margin-bottom">Explore Appwrite</h2>
-        <p>Appwrite provides all the core features of a model backend. Explore Appwrite's features for <a href="/docs/authentication">authentication</a>, <a href="/docs/databases">databases</a>, <a href="/docs/storage">file storage</a>, and executing server side code with <a href="/docs/functions">functions</a>.</p>
+        <p>Appwrite provides all the core features of a modern backend. Explore Appwrite's features for <a href="/docs/authentication">authentication</a>, <a href="/docs/databases">databases</a>, <a href="/docs/storage">file storage</a>, and executing server side code with <a href="/docs/functions">functions</a>.</p>
         <p>Appwrite is technology-agnostic. You can integrate Appwrite with any of the <a href="/docs/sdks">SDKs</a>, or directly with the <a href="/docs/rest">REST</a> or <a href="/docs/graphql">GraphQL</a> API.</p>
         <p>You can also respond to events in realtime with Appwrite's <a href="/docs/realtime">Realtime API</a> or through <a href="/docs/webhooks">webhooks</a>.</p>
     </div>
