fix broken h2 tag

--- a/app/views/docs/main.phtml
+++ b/app/views/docs/main.phtml
@@ -60,7 +60,7 @@ $getSpecsUrl = function($type, $platform) use ($latestVersion) {
     <p class="margin-bottom">This documentation contains all the information you need to start building Web, Flutter, Android, or iOS apps with Appwrite. You can also review full and detailed API references to all of our services, tools, and features.</p>
     
     <div class="notice">
-        <h2>Can't wait to get started?/h2>
+        <h2>Can't wait to get started?</h2>
         <p><a href="https://cloud.appwrite.io/">Create your first project now</a> and start building on Appwrite Cloud.</p>
     </div>
 
