--- a/app/views/docs/main.phtml
+++ b/app/views/docs/main.phtml
@@ -57,7 +57,7 @@ $getSpecsUrl = function($type, $platform) use ($latestVersion) {
 
 <div class="zone xxl">
 
-    <p class="margin-bottom">This documentation contains all the information you need to start building Web, Flutter, Android, or iOS apps with Appwrite. You can also review full and detailed API references to all of our services, tools, and features.</p>
+    <p class="margin-bottom">This documentation contains all the information you need to start building Web, Flutter, Android, or iOS apps with Appwrite. You can also review the complete and detailed API references to our services, tools, and features.</p>
     
     <div class="notice">
         <h2>Can't wait to get started?</h2>
@@ -66,9 +66,9 @@ $getSpecsUrl = function($type, $platform) use ($latestVersion) {
 
     <h2 class="margin-bottom">Overview</h2>
 
-    <p>Appwrite is a secure, open-source backend that abstract the complexity of common, complex, and repetitive tasks required for building a modern app.</p>
+    <p>Appwrite is a secure, open-source backend that abstracts the complexity of common, complex, and repetitive tasks required for building a modern app.</p>
 
-    <p>Appwrite provides you with a set of APIs, tools, and a management console UI to help you build your apps quickly without compromising on security. Appwrite provides user authentication and account management, user preferences, database and file storage, cloud functions, localization, image manipulation, and more.</p>
+    <p>Appwrite provides you with a set of APIs, tools, and a management console UI to help you build your apps quickly without compromising security. Appwrite includes features like user authentication and account management, user preferences, database and file storage, cloud functions, localization, image manipulation, and more.</p>
 
     <p>Appwrite adapts to your unique habits and needs. You can integrate Appwrite directly with your client app or use it alongside your existing backend server, using the language and technologies you're most comfortable with.</p>
 
@@ -98,15 +98,15 @@ $getSpecsUrl = function($type, $platform) use ($latestVersion) {
 
     <div class="margin-bottom-large">
         <h2 class="margin-bottom">Explore Appwrite</h2>
-        <p>Appwrite provides all the core features of a modern backend. Explore Appwrite's features for <a href="/docs/authentication">authentication</a>, <a href="/docs/databases">databases</a>, <a href="/docs/storage">file storage</a>, and executing server side code with <a href="/docs/functions">functions</a>.</p>
+        <p>Appwrite provides all the core features of a modern backend. Explore Appwrite's features for <a href="/docs/authentication">authentication</a>, <a href="/docs/databases">databases</a>, <a href="/docs/storage">file storage</a>, and executing server-side code with <a href="/docs/functions">functions</a>.</p>
         <p>Appwrite is technology-agnostic. You can integrate Appwrite with any of the <a href="/docs/sdks">SDKs</a>, or directly with the <a href="/docs/rest">REST</a> or <a href="/docs/graphql">GraphQL</a> API.</p>
-        <p>You can also respond to events in realtime with Appwrite's <a href="/docs/realtime">Realtime API</a> or through <a href="/docs/webhooks">webhooks</a>.</p>
+        <p>You can also respond to events in real time with Appwrite's <a href="/docs/realtime">Realtime API</a> or through <a href="/docs/webhooks">webhooks</a>.</p>
     </div>
 
     <div class="margin-bottom-large">
         <h2 class="margin-bottom">Contributing</h2>
 
-        <p>Are you looking to get started contributing to Appwrite? Our <a href="https://github.com/appwrite/appwrite/blob/master/CONTRIBUTING.md" target="_blank" rel="noopener">contribution guide</a> has you covered. Want an SDK for a language we don't yet support? Check out the <a href="https://github.com/appwrite/sdk-generator" target="_blank" rel="noopener">SDK generator</a> project. Also, have a look at our <a href="https://github.com/appwrite" target="_blank" rel="noopener">GitHub organization</a>.</p>
+        <p>Are you looking to contribute to Appwrite? Our <a href="https://github.com/appwrite/appwrite/blob/master/CONTRIBUTING.md" target="_blank" rel="noopener">contribution guide</a> has you covered. Want an SDK for a language we don't yet support? Check out the <a href="https://github.com/appwrite/sdk-generator" target="_blank" rel="noopener">SDK generator</a> project. Also, have a look at our <a href="https://github.com/appwrite" target="_blank" rel="noopener">GitHub organization</a> for all of our other projects.</p>
     </div>
 
     <div class="margin-bottom-large">
