Fix grammar and formatting on self-hosting

--- a/app/views/docs/self-hosting.phtml
+++ b/app/views/docs/self-hosting.phtml
@@ -17,7 +17,7 @@
 
 <p>You will be prompted to configure the following during the setup command:</p>
 <ol class="margin-top margin-bottom-large text-size-normal">
-    <li>Your Appwrite instance's HTTP and HTTPs ports.</li>
+    <li>Your Appwrite instance's HTTP and HTTPS ports.</li>
     <li>Your Appwrite instance's secret key which used to encrypt sensitive data.</li>
     <li>Your Appwrite instance's main hostname. Appwrite will generate a certificate using this hostname.</li>
     <li>Your Appwrite instance's DNS A record hostname. Typically set to the same value as your Appwrite instance's hostname.</li>
