--- a/app/views/docs/production.phtml
+++ b/app/views/docs/production.phtml
@@ -35,7 +35,7 @@
 
 <h2><a href="/docs/production#emails" id="emails">Emails</a></h2>
 <p>Sending emails is hard. There are a lot of spam rules and configurations to master in order to set up a functional SMTP server. While it is okay to use a self-hosted SMTP server during development, you should use a third-party SMTP provider for production so your email doesn't get labeled as spam.</p>
-<p>You can <a href="/docs/email-delivery">change Appwrite's SMTP settings</a> and credentials to any 3rd party provider you like who supports SMTP integration using our Docker environment variables. Most SMTP providers offer a decent free tier to get started with.</p>
+<p>You can <a href="/docs/email-delivery">change Appwrite's SMTP settings</a> and credentials to any 3rd party provider you like that supports SMTP integration using our Docker environment variables. Most SMTP providers offer a decent free tier to get started with.</p>
 
 <h2><a href="/docs/production#backups" id="backups">Backups</a></h2>
 
