added missing $ sign

--- a/app/views/docs/command-line-deployment.phtml
+++ b/app/views/docs/command-line-deployment.phtml
@@ -253,7 +253,7 @@ The Apprite CLI allows you to create and deploy databases, collections, buckets,
             <td>If access permissions can be defined at the document level.</td>
         </tr>
         <tr>
-            <td><code>permissions</code></td>
+            <td><code>$permissions</code></td>
             <td>array of strings</td>
             <td>Grants access permissions to users at the collection level. <a href="/docs/rest#permissions">Learn more about permissions</a>.</td>
         </tr>
